[package]
name = "golem-examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-examples"
description = "Golem example templates"
default-run = "golem-examples-cli"

[dependencies]
clap = { version = "4.4.17", features = ["derive"], optional = true }
colored = "2.1.0"
derive_more = "0.99.17"
golem-wit = { version = "1.0.0" }
include_dir = { version = "0.7.3" }
Inflector = { version = "0.11.4" }
once_cell = { version = "1.19.0" }
fancy-regex = { version = "0.13.0" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
strum = "0.26.1"
strum_macros = "0.26.1"
regex = "1.9.4"

[build-dependencies]
cargo_metadata = "0.18.1"
copy_dir = "0.1.3"
dir-diff = "0.3.3"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "golem-examples-cli"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "golem-examples-test-cli"
path = "src/test/main.rs"
required-features = ["cli"]
