[package]
name = "golem-examples"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-examples"
description = "Golem example templates"
default-run = "golem-examples-cli"

[dependencies]
clap = { version = "4.5.23", features = ["derive"], optional = true }
colored = "2.1.0"
derive_more = { version = "1.0.0", features = ["from_str"] }
golem-wit = { version = "1.1.0" }
include_dir = { version = "0.7.4" }
Inflector = { version = "0.11.4" }
once_cell = { version = "1.20.2" }
fancy-regex = { version = "0.14.0" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
strum = "0.26.3"
strum_macros = "0.26.4"
regex = "1.11.1"

[build-dependencies]
cargo_metadata = "0.19.1"
copy_dir = "0.1.3"
dir-diff = "0.3.3"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "golem-examples-cli"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "golem-examples-test-cli"
path = "src/test/main.rs"
required-features = ["cli"]
