[package]
name = "component-name"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "lib"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wit-bindgen = "0.7.0"
fs = "0.0.5"
rand = "0.8.5"
reqwest = { git = "https://github.com/zivergetech/reqwest", branch = "initial-wasi-impl", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3.21", features = ["formatting"] }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:api" = { path = "wit/deps/golem" }
