[package]
name = "component-name"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "lib"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
wit-bindgen = "0.7.0"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]