[package]
name = "auction"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4"] }
cargo-component-bindings = { version = "0.5.0" }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]