[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[dependencies]
lib = { path = "../lib" }
cargo-component-bindings = { version = "0.5.0" }
