[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[dependencies]
lib = { path = "../lib" }
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }
